data/derived/comb/progs/unify/prog4732.ml.out
Characters 40-45:
  wwhile (f, if b = (f b) then b else b);;
                    ^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * bool
